# trie

./: CMakeLists.txt  LICENSE  readme.md
ideas_backlog/: trie_0.cpp  trie_1.cpp
include/: trie.hpp
tests/: CMakeLists.txt  main.cpp  tests_index.cpp  tests_integers.cpp  tests_strings.cpp
tests/data/: input_actions.txt  input_values.txt  output_expected.txt
